--- a/Dockerfile copy
+++ b/Dockerfile copy
@@ -13,16 +13,17 @@ FROM base AS python-deps
 RUN pip install pipenv
 RUN apt-get update && apt-get install -y --no-install-recommends gcc python3-aiohttp
 
-# Generate requirements.txt in /
+# Install python dependencies in /.venv
 COPY Pipfile .
 COPY Pipfile.lock .
-RUN pipenv requirements > requirements.txt
+RUN PIPENV_VENV_IN_PROJECT=1 YARL_NO_EXTENSIONS=1 MULTIDICT_NO_EXTENSIONS=1 pipenv install --deploy
 
 
 FROM base AS runtime
 
-# install python packages
-RUN apt-get update && apt-get install -y --no-install-recommends python3-aiohttp
+# Copy virtual env from python-deps stage
+COPY --from=python-deps /.venv /.venv
+ENV PATH="/.venv/bin:$PATH"
 
 # Create and switch to a new user
 RUN useradd --create-home appuser
@@ -30,11 +31,7 @@ WORKDIR /home/appuser
 USER appuser
 
 # Install application into container
-COPY --from=python-deps /requirements.txt .
 COPY . .
-
-# Install the requirements
-RUN pip install --no-cache-dir -r requirements.txt
 
 # Run the application
 CMD ["python", "sense-monitor-to-influxdb.py"]
