--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,21 +4,20 @@ name: CI
 "on":
   push:
     branches:
-      - "main"
+      - main
     tags:
-      - "v*.*.*"
+      - v*.*.*
   pull_request:
     branches:
-      - "main"
+      - main
 
 permissions:
   contents: read
 
 env:
-  DOCKER_PLATFORMS: "linux/amd64,linux/arm64"
+  DOCKER_PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
-
   meta:
     name: Derive Build Metadata
     runs-on: ubuntu-latest
@@ -29,7 +28,7 @@ jobs:
         id: bin_version
         run: echo "bin_version=$(./.version.sh)" >> "$GITHUB_OUTPUT"
       - name: bin_version
-        run: 'echo bin_version: ${{ steps.bin_version.outputs.bin_version }}'
+        run: "echo bin_version: ${{ steps.bin_version.outputs.bin_version }}"
       - name: Check if this is a running version tag update
         id: running_version_tag
         run: |
@@ -43,7 +42,7 @@ jobs:
               echo "is_running_version_tag_update=false" >> "$GITHUB_OUTPUT"
           fi
       - name: is_running_version_tag
-        run: 'echo is_running_version_tag_update: ${{ steps.running_version_tag.outputs.is_running_version_tag_update }}'
+        run: "echo is_running_version_tag_update: ${{ steps.running_version_tag.outputs.is_running_version_tag_update }}"
     outputs:
       bin_name: ${{ github.event.repository.name }}
       bin_version: ${{ steps.bin_version.outputs.bin_version }}
@@ -52,24 +51,23 @@ jobs:
       packagecloud_owner: ${{ github.repository_owner }}
       packagecloud_repo: oss
       is_prerelease: >-
-            ${{
-              steps.running_version_tag.outputs.is_running_version_tag_update != 'true' &&
-              startsWith(github.ref, 'refs/tags/v') &&
-                (contains(github.ref, '-alpha.')
-                || contains(github.ref, '-beta.')
-                || contains(github.ref, '-rc.'))
-            }}
+        ${{
+          steps.running_version_tag.outputs.is_running_version_tag_update != 'true' &&
+          startsWith(github.ref, 'refs/tags/v') &&
+            (contains(github.ref, '-alpha.')
+            || contains(github.ref, '-beta.')
+            || contains(github.ref, '-rc.'))
+        }}
       is_release: >-
-            ${{
-              steps.running_version_tag.outputs.is_running_version_tag_update != 'true' &&
-              startsWith(github.ref, 'refs/tags/v') &&
-                !(contains(github.ref, '-alpha.')
-                || contains(github.ref, '-beta.')
-                || contains(github.ref, '-rc.'))
-            }}
+        ${{
+          steps.running_version_tag.outputs.is_running_version_tag_update != 'true' &&
+          startsWith(github.ref, 'refs/tags/v') &&
+            !(contains(github.ref, '-alpha.')
+            || contains(github.ref, '-beta.')
+            || contains(github.ref, '-rc.'))
+        }}
       is_pull_request: ${{ github.event_name == 'pull_request' }}
       is_running_version_tag_update: ${{ steps.running_version_tag.outputs.is_running_version_tag_update }}
-
 
   lint:
     name: Lint
@@ -92,20 +90,8 @@ jobs:
         run: |
           pip install pipenv
           pipenv install
-      - name: Run MegaLinter
-        uses: oxsecurity/megalinter@v7
-        env:
-          # See https://megalinter.io/configuration and .mega-linter.yml
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Archive MegaLinter artifacts
-        if: ( !env.ACT && ( success() || failure() ) )
-        uses: actions/upload-artifact@v3
-        with:
-          name: MegaLinter artifacts
-          path: |
-            megalinter-reports
-            mega-linter.log
-
+      - name: Run Trunk Check
+        uses: trunk-io/trunk-action@v1
 
   docker:
     name: Docker Images
@@ -116,7 +102,6 @@ jobs:
       contents: read
       packages: write
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -185,13 +170,12 @@ jobs:
           readme-filepath: ./README.md
           short-description: ${{ github.event.repository.description }}
 
-
   release:
     name: GitHub (Pre)Release
     needs: [meta]
     if: >-
-          needs.meta.outputs.is_release == 'true' ||
-          needs.meta.outputs.is_prerelease == 'true'
+      needs.meta.outputs.is_release == 'true' ||
+      needs.meta.outputs.is_prerelease == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -201,7 +185,6 @@ jobs:
         with:
           prerelease: ${{ needs.meta.outputs.is_prerelease == 'true' }}
           generate_release_notes: true
-
 
   tags:
     name: Update Release Tags
