--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,41 +2,41 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.20.1
+  version: 1.22.12
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.3
+      ref: v1.6.8
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
     - go@1.21.0
-    - node@18.12.1
+    - node@18.20.5
     - python@>=3.11.0
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
-    - pyright@1.1.351
-    - shellcheck@0.9.0
+    - pyright@1.1.400
+    - shellcheck@0.10.0
     - shfmt@3.6.0
-    - checkov@3.2.26
-    - trivy@0.49.1
-    - hadolint@2.12.0
-    - markdownlint@0.39.0
-    - actionlint@1.6.27
-    - bandit@1.7.7
-    - black@24.2.0
-    - flake8@7.0.0
+    - checkov@3.2.408
+    - trivy@0.61.1
+    - hadolint@2.12.1-beta
+    - markdownlint@0.44.0
+    - actionlint@1.7.7
+    - bandit@1.8.3
+    - black@25.1.0
+    - flake8@7.2.0
     - git-diff-check
-    - isort@5.13.2
-    - osv-scanner@1.6.2
-    - prettier@3.2.5
-    - ruff@0.2.2
-    - taplo@0.8.1
-    - trufflehog@3.68.2
-    - yamllint@1.35.1
+    - isort@6.0.1
+    - osv-scanner@2.0.1
+    - prettier@3.5.3
+    - ruff@0.11.7
+    - taplo@0.9.3
+    - trufflehog@3.88.25
+    - yamllint@1.37.0
   disabled:
     - mypy
   ignore:
